at least mostly so), and then to remove the old ways of doing things in a
subsequent version.

ADDED:

  * Added the <section*> family of tags, for unnumbered sections.

  * Added the <include> tag, to include the contents of another file.

  * Added the ability to add an additional message to the default page, via
    cs_main_page_text.

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

DOCUMENTATION:


#################
# Version 9.4.1 #
#################

FIXED:

  * Fixed an issue with rendering of certain test cases in the pythoncode
    question type.
 
  * Modified the handling of streams in the Python sandbox to avoid buffers
    filling up.
 
  * Modified error message handling in the Python sandbox to avoid long-running
    regex searches.


#################
# Version 9.4.0 #
#################

ADDED:

  * Added support for custom "submissions not allowed" messages via
    cs_nosubmit_message.

  * Added the cs_now variable to page load contexts.

  * Added the code_pre option to tests in the pythoncode question type, for
    code to be run before submitted code.

CHANGED:

  * Code is now licensed under the GNU Affero General Public License, v3+.
    Footer text has been updated to reflect this change.

  * cs_nsubmits_message was replaced by csq_nsubmits_message.

  * Updated MathJax to version 2.7.1, and updated it to use a future-proof
    renderer.

  * Updated PLY to version 3.10.

  * Updated Markdown to version 2.6.8.

  * Updated BeautifulSoup to version 4.6.0.

  * Fixed several issues with rendering of pythoncode question types.

  * Updated the "Formatting Help" page of the richtext question type.

REMOVED:

  * Removed large pieces of the default MathJax install because they will not
    be used.

FIXED:

  * Fixed broken "home" link for pages in the cs_util "pseudo-course."

  * Fixed issue with HTML tags not rendering inside of <section> tags.

  * Fixed error messages for expressions that can't be parsed in the expression